mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
    tier: database
  clusterIP: None
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  selector:
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - image: jolly3/wpback
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
