mysql-hpa.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql_hpaclusterservice
  labels:
    name: mysql_hpaservice
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: mysql_hpapod
  type: ClusterIP
