wordpress-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
    tier: frontend
    
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: ngouabounina/wordpress-5.1.1:v1
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        resources:
            requests:
              cpu: "32m"
              memory: "32Mi"
            limits: 
              cpu: "32m"
              memory: "32Mi"
