wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
spec:
  ingressClassName: kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / 
  rules:
  - host: app.ninilovecloud.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-service 
            port:
              number: 80
